@@ -15,6 +15,9 @@ Release 1.3.0 - unreleased
     HDFS-4898. BlockPlacementPolicyWithNodeGroup.chooseRemoteRack() fails to
     properly fallback to local rack. (szetszwo)
 
+    MAPREDUCE-5508. JobTracker memory leak caused by unreleased FileSystem
+    objects in JobInProgress#cleanupJob. (Xi Fang via cnauroth)
+
 Release 1.2.2 - unreleased
 
   INCOMPATIBLE CHANGES
